<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Myanmar Ticket</string>
    <string name="title_home">Home</string>
    <string name="title_transfer">Airport Transfer</string>
    <string name="title_bus">Bus Ticket</string>
    <string name="title_tour">Tour Package</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="mobile_services">Mobile Services </string>

    <string name="mobile_service_url">https://myanmarticket.azure-mobile.net/</string>
    <string name="mobile_service_key">sCIAeXGjWNEZkskobCEsOuAKEZFsXs62</string>

    <string name="contact_details">Account Details</string>
    <string name="lead_passenger_details">Lead Passenger Details</string>
    <string name="contact_note">Please note your booking details will be sent to this email id and mobile.</string>
    <string name="same_as_contact">The same as account details</string>

    <string name="auth_demo">Auth Demo</string>
    <string name="login_with_email">Login with Email</string>
    <string name="title_activity_logged_in">LoggedInActivity</string>
    <string name="youre_in">You\'re in!</string>
    <string name="title_activity_custom_login">CustomLoginActivity</string>
    <string name="custom_auth">Custom Auth</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="register_for_account">Register for Account</string>
    <string name="title_activity_register_account">RegisterAccountActivity</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="user_id">User ID</string>
    <string name="logout">Logout</string>
    <string name="test_401_retry">Test 401 Retry</string>
    <string name="test_401_no_retry">Test 401 no Retry</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Airport Transfer</item>
        <item >Bus Ticket</item>
        <item >Tour Packages</item>
        <item >Logout</item>
        <item >Login</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_logout</item>
        <item>@drawable/ic_login</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Airport Names -->
    <string-array name="airport_names">
        <item >Yangon International Airport</item>
        <item >Mandalay International Airport</item>
        <item >Nyaung U Airport</item>
    </string-array>

    <!-- Airport Codes -->
    <string-array name="airport_codes">
        <item >RGN</item>
        <item >MDL</item>
        <item >NYU</item>
    </string-array>

    <array name="cars_icons">
        <item>@drawable/ic_highlander</item>
        <item>@drawable/ic_super_custom</item>
        <item>@drawable/ic_mark_ii_grande</item>
        <item>@drawable/ic_hiace_commuter_13</item>
        <item>@drawable/ic_hiace_commuter_9</item>
        <item>@drawable/ic_alphard</item>
    </array>

    <!-- Airport Names -->
    <string-array name="title_names">
        <item >Mr.</item>
        <item >Ms.</item>
    </string-array>

    <!-- Airport Codes -->
    <string-array name="title_codes">
        <item >Mr</item>
        <item >Ms</item>
    </string-array>

</resources>
