<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/vehicle_bg">
    <!-- everything you already have -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/vehicle_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/inner_layout_style">

            <EditText
                android:id="@+id/txtRegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                style="@style/edit_text_style" >
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/txtRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                style="@style/edit_text_style"/>

            <EditText
                android:id="@+id/txtRegisterConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm"
                 style="@style/edit_text_style"/>

            <EditText
                android:id="@+id/txtRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                style="@style/edit_text_style"/>

            <EditText
                android:id="@+id/txtRegisterPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone"
                style="@style/edit_text_style"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                style="@style/button_style"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>